Refactor TableView creation and provide modals for settings
* modal for budget template
* modal for categorization rules

--- a/src/main/resources/css/light.css
+++ b/src/main/resources/css/light.css
@@ -108,7 +108,8 @@
 
 }
 
-.transaction-review {
+/* transaction review and settings */
+.overlay-modal {
     -fx-padding: 20 0 20 0;
     -fx-background-color: white;
     -fx-background-radius: 10;
